<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AddKhActivity"
    android:background="@color/colorPrimary"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:transitionName="transition_signup"
    android:id="@+id/Addkh"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ImageView
                android:id="@+id/img_addkh_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:padding="5dp"
                android:layout_centerVertical="true"
                />

            <TextView
                android:id="@+id/txt_addkh_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_addkh_back"
                android:fontFamily="@font/muli_black"
                android:paddingLeft="15dp"
                android:text="Thêm khách hàng"
                android:textColor="@color/black"
                android:textSize="30sp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            >

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:id="@+id/txt_addkh_Permission"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Quyền:"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    />

                <RadioGroup
                    android:id="@+id/rg_addkh_Quyen"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:layout_toRightOf="@id/txt_addkh_Permission"
                    android:layout_centerVertical="true"
                    >

                    <RadioButton
                        android:id="@+id/rd_addkh_QuanLy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Quản lý"
                        android:textSize="16sp"
                        android:layout_marginRight="10dp"/>

                    <RadioButton
                        android:id="@+id/rd_addkh_KhachHang"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="10dp"
                        android:text="Khách hàng"
                        android:textSize="16sp" />

                </RadioGroup>
            </RelativeLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtl_addkh_HoVaTen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_fullname"
                app:startIconDrawable="@drawable/ic_baseline_create_pencil"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtl_addkh_TenDN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_username"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtl_addkh_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                app:startIconDrawable="@drawable/ic_baseline_email_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtl_addkh_SDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone"
                app:startIconDrawable="@drawable/ic_baseline_local_phone_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="phone"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtl_addkh_MatKhau"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/black"
                app:hintTextColor="@color/black"
                android:textColorHint="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black"
                app:endIconTint="@color/black"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/black"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                >
                <TextView
                    android:id="@+id/txt_addkh_Gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Giới tính:"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:layout_centerVertical="true"
                    />

                <RadioGroup
                    android:id="@+id/rg_addkh_GioiTinh"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:layout_toRightOf="@id/txt_addkh_Gender"
                    android:layout_centerVertical="true"
                    >

                    <RadioButton
                        android:id="@+id/rd_addkh_Nam"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nam"
                        android:layout_marginRight="10dp"/>

                    <RadioButton
                        android:id="@+id/rd_addkh_Nu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Nữ"
                        android:layout_marginRight="10dp"/>

                    <RadioButton
                        android:id="@+id/rd_addkh_Khac"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Khác" />
                </RadioGroup>
            </RelativeLayout>



            <DatePicker
                android:id="@+id/dt_addkh_NgaySinh"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                android:spinnersShown="true"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btn_addkh_ThemKH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@color/black"
            android:backgroundTint="@color/black"
            android:elevation="5dp"
            android:text="Thêm"
            android:textSize="16sp"
            android:textColor="@color/white"
            app:backgroundTint="@color/black"
            />
    </LinearLayout>

</ScrollView>